      requested via X-Python-Version) instead od failing. Add dependency for
      each (supported) interpreter detected in shebangs
    - /usr/share/pyshared is not added to the package if empty (closes: 623909)
    - dh_python2's manpage updated (among other changes, no longer advertises
      python:Breaks - closes: 631397, describes .pyinstall and .pyremove files)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 12 Jun 2011 13:28:48 +0200

python-defaults (2.7.2-1) experimental; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2: generate more strict dependencies for packages with private
    extensions (closes: #625760)

  [ Scott Kitterman ]
  * Set python2.7 as default for testing in experimental
    - Update version references in patching file debian/control, control.in,
      debian_defaults, python.postinst.in, python.preinst.in, pyversions.py,
      and rules

 -- Scott Kitterman <scott@kitterman.com>  Tue, 31 May 2011 07:44:33 -0400

python-defaults (2.6.6-14) unstable; urgency=low

  [ Piotr Ożarowski ]
  * python.mk: add py_builddir macro.
    $(call py_builddir, 2.6) returns "build/lib.linux-x86_64-2.6" on amd64
  * dh_python2, pycompile, pyclean: add "namespace" feature:
    dh_python2 parses Egg's namespace_packages.txt files (in addition to
    --namespace command line argument(s)) and drops empty __init__.py files
    from binary package. pycompile will regenerates them at install time and
    pyclean will remove them at uninstall time (if they're no longer used in
    installed packages
  * Remove myself from Uploaders

  [ Scott Kitterman ]
  * Upload to Unstable (adds Python 2.7 as a supported Python in Unstable)
  * Drop python2.5 as a supported Python version
    - Update debian/debian_defaults
    - Update debpython/version.py
    - Update debian/control.in
  * Update copyright years for dh_python2, pycompile, pyclean and debpython in
    debian/copyright

 -- Scott Kitterman <scott@kitterman.com>  Fri, 15 Apr 2011 00:04:07 -0400
