@@ -186,16 +186,33 @@ def parse_pydep(fname):
         ver = None
 
     result = []
+    modified = optional_section = False
+    processed = []
     with open(fname, 'r') as fp:
-        for line in fp:
-            line = line.strip()
-            # ignore all optional sections
+        lines = [i.strip() for i in fp.readlines()]
+        for line in lines:
+            if not line or line.startswith('#'):
+                processed.append(line)
+                continue
             if line.startswith('['):
-                break
-            if line:
-                dependency = guess_dependency(line, ver)
-                if dependency:
-                    result.append(dependency)
+                optional_section = True
+            if optional_section:
+                processed.append(line)
+                continue
+            dependency = guess_dependency(line, ver)
+            if dependency:
+                result.append(dependency)
+                if 'setuptools' in line.lower():
+                    # TODO: or dependency in recommends\
+                    # or dependency in suggests
+                    modified = True
+                else:
+                    processed.append(line)
+            else:
+                processed.append(line)
+    if modified:
+        with open(fname, 'w') as fp:
+            fp.writelines(i + '\n' for i in processed)
     return result
 
 
